[project]
name = "infinitile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "diffusers>=0.34.0",
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "noise>=1.2.2",
    "seaborn>=0.13.2",
    "transformers>=4.53.0",
]
